fixed laptop/monitor responsiveness, table overflows, trip creation bug, and added sorts

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -1,190 +1,184 @@
 body {
-    overflow-x: hidden;
-    background-color: #F2F2F2;
+  overflow-x: hidden;
+  background-color: #f2f2f2;
 }
 
 @media (max-width: 768px) {
-    #loginPanel {
-        width: 25%;
-    }
+  #loginPanel {
+    width: 25%;
+  }
 }
 
 /*login page*/
 #loginBackground {
-    height: 100vh;
-    background-size: cover;
-    background-image: url("../../public/truckWallpaper.jpg");
+  height: 100vh;
+  background-size: cover;
+  background-image: url("../../public/truckWallpaper.jpg");
 }
 
 #loginPanel {
-    width: 30%;
-    padding: 3%;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 30%;
+  padding: 3%;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /*registration page*/
 #registrationPanel {
-    width: 30%;
-    padding: 3%;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 30%;
+  padding: 3%;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /*navigation bar*/
 
 .logo {
-    color: #2E8B57;
+  color: #2e8b57;
 }
 
 .unlogo {
-    color: rgb(255, 149, 35);
+  color: rgb(255, 149, 35);
 }
 
 #sidebar {
-    background-color: white;
-    width: 100%;
-    height: 100vh;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
+  width: 100%;
+  height: 100vh;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .links {
-    padding: 3%;
-    font-size: medium;
-    font-style: normal;
-    color: black;
-    text-decoration: none;
+  padding: 3%;
+  font-size: medium;
+  font-style: normal;
+  color: black;
+  text-decoration: none;
 }
 
 .links:hover {
-    padding: 4%;
-    width: 100%;
-    color: black;
-    border-radius: 10px;
-    background-color: #F2F2F2;
-    cursor: pointer;
+  padding: 4%;
+  width: 100%;
+  color: black;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  cursor: pointer;
 }
 
 .icons {
-    color: #2E8B57;
-    margin-bottom: 3%;
+  color: #2e8b57;
+  margin-bottom: 3%;
 }
 
 #homeIcon {
-    margin-right: 5%;
+  margin-right: 5%;
 }
 
 #truckIcon {
-    margin-right: 5%;
+  margin-right: 5%;
 }
 
 #tripsIcon {
-    margin-right: 5%;
+  margin-right: 5%;
 }
 
 #expensesIcon {
-    margin-right: 5%;
-}
-
-#logoutSegment {
-    margin-top: 220%;
+  margin-right: 5%;
 }
 
 #logout {
-    margin-left: 8%;
-    cursor: pointer;
-    color: black;
+  margin-left: 8%;
+  cursor: pointer;
+  color: black;
 }
 
 #logout:hover {
-    color: red;
+  color: red;
 }
 
 /*dashboard*/
 
 .dsContainer {
-    background-color: white;
+  background-color: white;
 }
 
 #pendingWidget {
-    color: #2E8B57;
-    border-radius: 5px;
-    margin-right: 1%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+  color: #2e8b57;
+  border-radius: 5px;
+  margin-right: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .showIcon {
-    color: #2E8B57;
-    font-size: large;
+  color: #2e8b57;
+  font-size: large;
 }
 
 .trashIcon {
-    cursor: pointer;
-    color: red;
-    font-size: large;
-
+  cursor: pointer;
+  color: red;
+  font-size: large;
 }
 
 .editIcon {
-    color: orange;
-    font-size: large;
-
+  color: orange;
+  font-size: large;
 }
 
 .createIcon {
-    color: #2E8B57;
+  color: #2e8b57;
 }
 
 #newIcon {
-    color: #2E8B57;
-    font-size: x-large;
+  color: #2e8b57;
+  font-size: x-large;
 }
 
 /*widgets*/
 
 #backButton {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #backButton:hover {
-    color: #2E8B57;
+  color: #2e8b57;
 }
 
 .widget {
-    width: 100%;
-    min-height: 15vh;
-    font-size: small;
+  width: 100%;
+  min-height: 15vh;
+  font-size: small;
 }
 
 /*manage trucks page*/
 .tableContainer {
-    height: 75vh;
+  height: 75vh;
 }
 
 .createButton:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s ease-in-out;
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
 }
 
 /*edit truck form*/
 
 #editTruckForm {
-    background-color: white;
-    width: 35%;
+  background-color: white;
+  width: 35%;
 }
 
 /*show truck details*/
 
 .infoContainer {
-    background-color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .gmsModal .modal-content {
-    border: none;
+  border: none;
 }
